--- a/nomad.yaml
+++ b/nomad.yaml
@@ -25,10 +25,13 @@ elastic:
     materials_index: nomad_oasis_materials_v1
 
 plugins:
-  options:
-    schemas/nomad_material_processing:
-      python_package: nomad_material_processing
-    schemas/nomad_measurements:
-      python_package: nomad_measurements
-    parsers/nomad_measurements/xrd:
-      python_package: nomad_measurements.xrd.parser
+  entry_point:
+    include: [
+    "baseclasses"]
+  #options:
+    #schemas/nomad_material_processing:
+      #python_package: nomad_material_processing
+    #schemas/nomad_measurements:
+      #python_package: nomad_measurements
+    #parsers/nomad_measurements/xrd:
+      #python_package: nomad_measurements.xrd.parser
