--- a/nomad.yaml
+++ b/nomad.yaml
@@ -28,7 +28,7 @@ plugins:
   entry_point:
     include: [
     "baseclasses",
-    "nomad_chemical_energy"]
+    "nomad_chemical_energy.schema_packages"]
   #options:
     #schemas/nomad_material_processing:
       #python_package: nomad_material_processing
