--- a/nomad.yaml
+++ b/nomad.yaml
@@ -24,14 +24,14 @@ elastic:
     entries_index: nomad_oasis_entries_v1
     materials_index: nomad_oasis_materials_v1
 
-plugins:
-  entry_point:
-    include: [
-    "baseclasses"]
-  #options:
-    #schemas/nomad_material_processing:
-      #python_package: nomad_material_processing
-    #schemas/nomad_measurements:
-      #python_package: nomad_measurements
-    #parsers/nomad_measurements/xrd:
-      #python_package: nomad_measurements.xrd.parser
+# plugins:
+#   entry_point:
+#     include: [
+#     "baseclasses"]
+#   #options:
+#     #schemas/nomad_material_processing:
+#       #python_package: nomad_material_processing
+#     #schemas/nomad_measurements:
+#       #python_package: nomad_measurements
+#     #parsers/nomad_measurements/xrd:
+#       #python_package: nomad_measurements.xrd.parser
